--- a/exercicios/ex021/desaf10/estilo/style.css
+++ b/exercicios/ex021/desaf10/estilo/style.css
@@ -52,7 +52,7 @@ header > h1 {
     font-size: 3em;
     font-weight: normal;
     margin-bottom: 20px;
-    text-shadow: 2px 2px 0px rgba(0, 0, 0.267);
+    text-shadow: 2px 2-px 0px rgba(0, 0, 0.267);
 
 }
 
@@ -72,7 +72,7 @@ nav {
 }
 
 nav > a {
-    color: var(--cor1);
+    color: var(--cor2);
     padding: 10px;
     border-radius: 5px;
     text-decoration: none;
@@ -206,6 +206,21 @@ footer a:hover {
     text-decoration: underline;
     color: var(--cor1);
 }
+
+footer img {
+    width: 40px;
+    height: 40px;
+
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+}
+
+
+
+
 
 
 
